Custom rock dataset

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ enable_testing()
 
 add_executable(${PROJECT_NAME} 
     src/main.cpp
+    src/RockDataset.cpp
+    src/RockDataset.hpp
+    src/Net.hpp
 )
 
 target_link_libraries(${PROJECT_NAME} "${TORCH_LIBRARIES}")
