Refactor RockImageRGBNet to its own folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(CTest)
 enable_testing()
 
 add_subdirectory(src/RockImageRGBDataset)
+add_subdirectory(src/RockImageRGBNet)
 add_subdirectory(src/utils)
 
 add_executable(${PROJECT_NAME} 
@@ -20,6 +21,7 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} 
     "${TORCH_LIBRARIES}" 
     RockImageRGBDataset
+    RockImageRGBNet
     utils
 )
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
