--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ enable_testing()
 
 add_subdirectory(src/RockImageRGBDataset)
 add_subdirectory(src/RockImageRGBNet)
+add_subdirectory(src/RockImageRGBTraining)
 add_subdirectory(src/utils)
 
 add_executable(${PROJECT_NAME} 
@@ -21,6 +22,7 @@ target_link_libraries(${PROJECT_NAME}
     "${TORCH_LIBRARIES}" 
     RockImageRGBDataset
     RockImageRGBNet
+    RockImageRGBTraining
     utils
 )
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
