--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ enable_testing()
 add_subdirectory(src/RockImageRGBDataset)
 add_subdirectory(src/RockImageRGBNet)
 add_subdirectory(src/RockImageRGBTraining)
+add_subdirectory(src/RockImageRGBTesting)
 add_subdirectory(src/utils)
 
 add_executable(${PROJECT_NAME} 
@@ -23,6 +24,7 @@ target_link_libraries(${PROJECT_NAME}
     RockImageRGBDataset
     RockImageRGBNet
     RockImageRGBTraining
+    RockImageRGBTesting
     utils
 )
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
